<?xml version="1.0" encoding="utf-8"?>
<!--Mitali Karmarkar-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.karmarkar.mitali.a5.MainActivity"
    android:padding="@dimen/border_padding">

    <TextView
        android:id="@+id/text_view_bill_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_bill_amount"
        android:textStyle="bold"
        android:textColor="@color/colorTextView"
        android:textSize="@dimen/font_size"
        android:layout_alignParentStart="true"
        android:paddingEnd="@dimen/widget_padding"
        android:paddingBottom="@dimen/border_padding"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_bill_amount"
        android:textSize="@dimen/font_size"
        android:textColor="@color/colorInput"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/text_view_bill_amount"
        android:layout_alignBaseline="@id/text_view_bill_amount"
        android:layout_alignParentTop="true"
        android:paddingStart="@dimen/widget_padding"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/text_view_tip_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_tip_by"
        android:textStyle="bold"
        android:textColor="@color/colorTextView"
        android:textSize="@dimen/font_size"
        android:layout_alignParentStart="true"
        android:layout_below="@id/text_view_bill_amount"
        android:paddingEnd="@dimen/widget_padding"
        android:paddingBottom="@dimen/widget_padding"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group_tip_by"
        android:layout_below="@id/text_view_bill_amount"
        android:layout_toEndOf="@id/text_view_bill_amount"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_by_percent"
            android:text="@string/string_tip_by_percent"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_by_value"
            android:text="@string/string_tip_by_value"/>
    </RadioGroup>

    <TextView
        android:id="@+id/text_view_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_percent"
        android:textStyle="bold"
        android:textColor="@color/colorTextView"
        android:textSize="@dimen/font_size"
        android:layout_below="@id/text_view_tip_by"
        android:paddingEnd="@dimen/widget_padding"
        android:paddingTop="@dimen/widget_padding"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout_percent_value"
        android:layout_below="@id/text_view_tip_by"
        android:layout_toEndOf="@id/text_view_bill_amount"
        android:paddingEnd="@dimen/widget_padding"
        android:paddingStart="@dimen/widget_padding"
        android:paddingTop="@dimen/widget_padding"
        android:layout_alignBaseline="@id/text_view_percent">
        <TextView
            android:id="@+id/text_view_percent_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_default_percent_value"
            android:textColor="@color/colorInput"
            android:textSize="@dimen/font_size"
            android:paddingEnd="@dimen/widget_padding"
            android:layout_centerVertical="true"/>
        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekbar_percent"
            android:max="@string/max_seekbar_value"
            android:layout_toEndOf="@id/text_view_percent_value"
            android:layout_alignParentEnd="true"
            android:progress="@string/default_seekbar_value"
            android:layout_centerVertical="true">
        </SeekBar>
    </RelativeLayout>
    <TextView
        android:id="@+id/text_view_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_tip"
        android:textStyle="bold"
        android:textColor="@color/colorTextView"
        android:textSize="@dimen/font_size"
        android:layout_below="@id/text_view_percent"
        android:paddingEnd="@dimen/widget_padding"
        android:paddingTop="@dimen/border_padding"/>
    <TextView
        android:id="@+id/text_view_tip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_money_default"
        android:textColor="@color/colorInput"
        android:textSize="@dimen/font_size"
        android:layout_below="@id/text_view_percent"
        android:layout_toEndOf="@id/text_view_bill_amount"
        android:paddingEnd="@dimen/widget_padding"
        android:paddingStart="@dimen/widget_padding"
        android:paddingTop="@dimen/border_padding"
        android:layout_alignBaseline="@id/text_view_tip"/>
    <EditText
        android:id="@+id/edit_text_tip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorInput"
        android:textSize="@dimen/font_size"
        android:layout_below="@id/text_view_percent"
        android:layout_toEndOf="@id/text_view_bill_amount"
        android:paddingEnd="@dimen/widget_padding"
        android:paddingStart="@dimen/widget_padding"
        android:paddingTop="@dimen/border_padding"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@id/text_view_tip"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/text_view_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_total"
        android:textStyle="bold"
        android:textColor="@color/colorTextView"
        android:textSize="@dimen/font_size"
        android:layout_below="@id/text_view_tip"
        android:paddingEnd="@dimen/widget_padding"
        android:paddingTop="@dimen/border_padding"/>
    <TextView
        android:id="@+id/text_view_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_money_default"
        android:textColor="@color/colorInput"
        android:textSize="@dimen/font_size"
        android:layout_below="@id/text_view_tip_value"
        android:layout_toEndOf="@id/text_view_bill_amount"
        android:paddingEnd="@dimen/widget_padding"
        android:paddingStart="@dimen/widget_padding"
        android:paddingTop="@dimen/border_padding"
        android:layout_alignBaseline="@id/text_view_total"/>

    <TextView
        android:id="@+id/text_view_round_up_to_nearest_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_round_up_to_nearest_dollar"
        android:textStyle="bold"
        android:textColor="@color/colorTextView"
        android:textSize="@dimen/font_size"
        android:layout_below="@id/text_view_total"
        android:paddingEnd="@dimen/widget_padding"
        android:paddingTop="@dimen/border_padding"
        android:gravity="top"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_round_up_to_nearest_dollar"
        android:paddingTop="@dimen/border_padding"
        android:paddingStart="@dimen/widget_padding"
        android:layout_toEndOf="@id/text_view_round_up_to_nearest_dollar"
        android:layout_below="@id/text_view_total"
        android:layout_alignBaseline="@id/text_view_round_up_to_nearest_dollar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/border"
        android:id="@+id/divider"
        android:layout_below="@id/text_view_round_up_to_nearest_dollar"
        android:layout_marginTop="@dimen/border_padding"
        android:layout_marginBottom="@dimen/border_padding"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/text_view_split_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_split_bill"
        android:textStyle="bold"
        android:textColor="@color/colorTextView"
        android:textSize="@dimen/font_size"
        android:layout_below="@id/divider"
        android:paddingEnd="@dimen/widget_padding"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_split_bill"
        android:entries="@array/array_split_bill"
        android:textColor="@color/colorInput"
        android:textSize="@dimen/font_size"
        android:layout_below="@id/divider"
        android:layout_toEndOf="@id/text_view_bill_amount"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout_per_person"
        android:paddingTop="@dimen/border_padding"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/text_view_split_bill"
        android:visibility="gone">
        <TextView
            android:id="@+id/text_view_per_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_per_person"
            android:textStyle="bold"
            android:textColor="@color/colorTextView"
            android:textSize="@dimen/font_size"
            android:paddingEnd="@dimen/widget_padding"/>
        <TextView
            android:id="@+id/text_view_per_person_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_money_default"
            android:textColor="@color/colorInput"
            android:textSize="@dimen/font_size"
            android:layout_toEndOf="@id/text_view_per_person"
            android:paddingEnd="@dimen/widget_padding"
            android:paddingStart="@dimen/widget_padding"
            android:layout_alignBaseline="@id/text_view_per_person"/>
    </RelativeLayout>
</RelativeLayout>
